--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -44,5 +44,8 @@ tauri-plugin-eco-autostart.workspace = true
 [target."cfg(target_os = \"macos\")".dependencies]
 tauri-nspanel.workspace = true
 
+[target."cfg(target_os = \"windows\")".dependencies]
+image = { version = "0.25", default-features = false, features = ["bmp", "png"] }
+
 [features]
 cargo-clippy = []
